--- a/src/main/resources/static/autostrada.html
+++ b/src/main/resources/static/autostrada.html
@@ -1,99 +1,230 @@
 <!DOCTYPE html>
 <html lang="it">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Explorer rete - Autostrada</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="css/styles.css">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <title>Explorer rete - Autostrada</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
+    <style>
+        /* Stili aggiuntivi per debug */
+        .debug-modal {
+            border: 2px solid red !important;
+        }
 
+        .role-badge {
+            background-color: #0d6efd;
+            color: white;
+            padding: 4px 12px;
+            border-radius: 20px;
+            font-size: 12px;
+            font-weight: 600;
+        }
+
+        .active-level {
+            background-color: #0d6efd !important;
+            color: white !important;
+        }
+
+        .list-group-item {
+            cursor: pointer;
+        }
+
+        .small-muted {
+            font-size: 0.875rem;
+            color: #6c757d;
+        }
+
+        .breadcrumb-custom {
+            font-style: italic;
+        }
+
+        .level-title {
+            font-size: 1.25rem;
+            font-weight: 600;
+            color: #333;
+        }
+
+        .topbar {
+            background-color: #f8f9fa;
+            border-bottom: 1px solid #dee2e6;
+        }
+    </style>
 </head>
 <body>
 <header class="topbar py-2 mb-3">
-  <div class="container-fluid d-flex justify-content-between align-items-center">
-    <div class="d-flex align-items-center gap-3">
-      <h4 class="mb-0">Gestionale Autostradale</h4>
-      <span id="roleBadge" class="role-badge" style="display:none;">Amministratore</span>
+    <div class="container-fluid d-flex justify-content-between align-items-center">
+        <div class="d-flex align-items-center gap-3">
+            <h4 class="mb-0">Gestionale Autostradale</h4>
+            <span id="roleBadge" class="role-badge" style="display:none;">Amministratore</span>
+        </div>
+        <div class="d-flex align-items-center gap-2">
+            <a href="dashboard.html" class="btn btn-outline-secondary btn-sm">Dashboard</a>
+            <button id="logoutBtn" class="btn btn-outline-danger btn-sm">Logout</button>
+        </div>
     </div>
-    <div class="d-flex align-items-center gap-2">
-      <a href="dashboard.html" class="btn btn-outline-secondary btn-sm">Dashboard</a>
-      <button id="logoutBtn" class="btn btn-outline-danger btn-sm">Logout</button>
-    </div>
-  </div>
 </header>
 
 <main class="container-fluid py-2">
-  <!-- Barra orizzontale dei livelli -->
-  <div class="card bg-white p-3 mb-3">
-    <ul class="list-group list-group-horizontal list-group-flush w-100" id="levelList">
-      <li class="list-group-item flex-fill text-center active-level" data-level="regions">
-        <strong>Regione</strong>
-      </li>
-      <li class="list-group-item flex-fill text-center" data-level="highways">
-        <span class="text-muted">&gt;</span> Autostrada
-      </li>
-      <li class="list-group-item flex-fill text-center" data-level="tolls">
-        <span class="text-muted">&gt;</span> Casello
-      </li>
-      <li class="list-group-item flex-fill text-center" data-level="lanes">
-        <span class="text-muted">&gt;</span> Corsia
-      </li>
-      <li class="list-group-item flex-fill text-center" data-level="devices">
-        <span class="text-muted">&gt;</span> Dispositivi
-      </li>
-    </ul>
-    <div class="small-muted mt-2 breadcrumb-custom" id="pathSummary">
-      Seleziona una regione per iniziare.
-    </div>
-  </div>
-
-  <!-- Lista corrente -->
-  <div class="card bg-white p-3">
-    <div class="d-flex justify-content-between align-items-center mb-2">
-      <div>
-        <div class="level-title" id="levelTitle">REGIONI</div>
-      </div>
-
-      <div id="status" class="small-muted me-2"></div>
-
-      <div class="btn-group btn-group-sm" role="group" aria-label="Azioni livello"> <button id="btnAdd" class="btn btn-success">Nuovo</button> </div>
+    <!-- Barra orizzontale dei livelli -->
+    <div class="card bg-white p-3 mb-3">
+        <ul class="list-group list-group-horizontal list-group-flush w-100" id="levelList">
+            <li class="list-group-item flex-fill text-center active-level" data-level="regions">
+                <strong>Regione</strong>
+            </li>
+            <li class="list-group-item flex-fill text-center" data-level="highways">
+                <span class="text-muted">&gt;</span> Autostrada
+            </li>
+            <li class="list-group-item flex-fill text-center" data-level="tolls">
+                <span class="text-muted">&gt;</span> Casello
+            </li>
+            <li class="list-group-item flex-fill text-center" data-level="lanes">
+                <span class="text-muted">&gt;</span> Corsia
+            </li>
+            <li class="list-group-item flex-fill text-center" data-level="devices">
+                <span class="text-muted">&gt;</span> Dispositivi
+            </li>
+        </ul>
+        <div class="small-muted mt-2 breadcrumb-custom" id="pathSummary">
+            Seleziona una regione per iniziare.
+        </div>
     </div>
 
-    <ul class="list-group" id="itemsList"></ul>
-  </div>
+    <!-- Lista corrente -->
+    <div class="card bg-white p-3">
+        <div class="d-flex justify-content-between align-items-center mb-2">
+            <div>
+                <div class="level-title" id="levelTitle">REGIONI</div>
+            </div>
 
-  <!-- Dialog CRUD -->
-  <div class="modal fade" id="crudModal" tabindex="-1" aria-hidden="true">
-    <div class="modal-dialog">
-      <form class="modal-content" id="crudForm">
-        <div class="modal-header">
-          <h5 class="modal-title" id="crudModalTitle"></h5>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Chiudi"></button>
+            <div id="status" class="small-muted me-2"></div>
+
+            <div class="btn-group btn-group-sm" role="group" aria-label="Azioni livello">
+                <!-- Bottone corretto con data-bs-toggle e data-bs-target -->
+                <button id="btnAdd" class="btn btn-success"
+                        data-bs-toggle="modal"
+                        data-bs-target="#crudModal">
+                    Nuovo
+                </button>
+            </div>
         </div>
-        <div class="modal-body">
-          <div class="mb-3">
-            <label for="fieldName" class="form-label" id="fieldNameLabel">Nome</label>
-            <input type="text" class="form-control" id="fieldName" required>
-          </div>
-          <div class="mb-3 d-none" id="fieldExtraGroup">
-            <label for="fieldExtra" class="form-label" id="fieldExtraLabel"></label>
-            <input type="text" class="form-control" id="fieldExtra">
-          </div>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Annulla</button>
-          <button type="submit" class="btn btn-primary">Salva</button>
-        </div>
-      </form>
+
+        <ul class="list-group" id="itemsList">
+            <!-- Elementi verranno inseriti qui dinamicamente -->
+            <li class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">
+                <div>
+                    <i class="bi bi-geo-alt me-2"></i>
+                    Lombardia (LOM)
+                </div>
+                <div>
+                    <button class="btn btn-sm btn-outline-primary me-1">Modifica</button>
+                    <button class="btn btn-sm btn-outline-danger">Elimina</button>
+                </div>
+            </li>
+            <li class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">
+                <div>
+                    <i class="bi bi-geo-alt me-2"></i>
+                    Lazio (LAZ)
+                </div>
+                <div>
+                    <button class="btn btn-sm btn-outline-primary me-1">Modifica</button>
+                    <button class="btn btn-sm btn-outline-danger">Elimina</button>
+                </div>
+            </li>
+        </ul>
     </div>
-  </div>
+
+    <!-- Modal CRUD - Correggi la struttura -->
+    <div class="modal fade" id="crudModal" tabindex="-1" aria-labelledby="crudModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <form id="crudForm">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="crudModalTitle">Nuovo Elemento</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Chiudi"></button>
+                    </div>
+                    <div class="modal-body">
+
+                        <!-- Campo principale -->
+                        <div class="mb-3">
+                            <label for="fieldName" class="form-label" id="fieldNameLabel">Nome</label>
+                            <input type="text" class="form-control" id="fieldName" required>
+                        </div>
+
+                        <!-- Gruppo CASSELLO -->
+                        <div class="mb-3 d-none" id="groupCasello">
+                            <label for="caselloLimite" class="form-label">Limite velocità (km/h)</label>
+                            <input type="number" class="form-control" id="caselloLimite" min="20" max="200" value="130">
+                            <div class="form-check mt-2">
+                                <input class="form-check-input" type="checkbox" id="caselloChiuso">
+                                <label class="form-check-label" for="caselloChiuso">
+                                    Casello chiuso
+                                </label>
+                            </div>
+                        </div>
+
+                        <!-- Gruppo CORSIA -->
+                        <div class="mb-3 d-none" id="groupCorsia">
+                            <label for="corsiaVerso" class="form-label">Verso</label>
+                            <select class="form-select mb-2" id="corsiaVerso">
+                                <option value="" disabled selected>Seleziona verso</option>
+                                <option value="ENTRATA">ENTRATA</option>
+                                <option value="USCITA">USCITA</option>
+                            </select>
+
+                            <label for="corsiaTipo" class="form-label">Tipo corsia</label>
+                            <select class="form-select mb-2" id="corsiaTipo">
+                                <option value="" disabled selected>Seleziona tipo</option>
+                                <option value="NORMALE">Normale</option>
+                                <option value="TELEPASS">Telepass</option>
+                                <option value="EMERGENZA">Emergenza</option>
+                            </select>
+
+                            <div class="form-check mt-2">
+                                <input class="form-check-input" type="checkbox" id="corsiaChiuso">
+                                <label class="form-check-label" for="corsiaChiuso">
+                                    Corsia chiusa
+                                </label>
+                            </div>
+                        </div>
+
+                        <!-- Gruppo DISPOSITIVO -->
+                        <div class="mb-3 d-none" id="groupDispositivo">
+                            <label for="dispTipo" class="form-label">Tipo dispositivo</label>
+                            <select class="form-select mb-2" id="dispTipo">
+                                <option value="" disabled selected>Seleziona tipo</option>
+                                <option value="TELECAMERA">Telecamera</option>
+                                <option value="SENSORE">Totem</option>
+                                <option value="DISPLAY">Sbarra</option>
+                            </select>
+
+                            <label for="dispStato" class="form-label">Stato</label>
+                            <select class="form-select" id="dispStato">
+                                <option value="" disabled selected>Seleziona stato</option>
+                                <option value="ATTIVO">ATTIVO</option>
+                                <option value="INATTIVO">INATTIVO</option>
+                            </select>
+                        </div>
+
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Annulla</button>
+                        <button type="submit" class="btn btn-primary">Salva</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
 
 </main>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" defer></script>
+<!-- Carica Bootstrap JS senza defer per debug -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
+<!-- Il tuo script principale -->
 <script src="js/autostrada.js"></script>
+
 </body>
 </html>
