ristrutturamento della gerarchia

--- a/frontend-service/src/main/resources/static/index.html
+++ b/frontend-service/src/main/resources/static/index.html
@@ -29,7 +29,7 @@
         <div class="forms-wrapper">
 
             <!-- Login Form -->
-            <form id="login-form" method="post" action="/api/login" novalidate>
+            <form id="login-form" method="post"  novalidate>
                 <div class="mb-3">
                     <label for="login-username">Username</label>
                     <input type="text" id="login-username" name="username" class="form-control" placeholder="Inserisci username" autocomplete="username" required />
@@ -59,7 +59,7 @@
             </form>
 
             <!-- Register Form -->
-            <form id="register-form" method="post" action="/api/register" novalidate>
+            <form id="register-form" method="post" novalidate>
                 <div class="mb-3">
                     <label for="reg-username">Username</label>
                     <input type="text" id="reg-username" name="username" class="form-control"
