fix input del crud (regioni attraversate è solo in autostrada) e tipo è tornato manuale

--- a/frontend-service/src/main/resources/static/autostrada.html
+++ b/frontend-service/src/main/resources/static/autostrada.html
@@ -194,7 +194,7 @@
                             <label for="corsiaTipo" class="form-label">Tipo corsia</label>
                             <select class="form-select mb-2" id="corsiaTipo">
                                 <option value="" disabled selected>Seleziona tipo</option>
-                                <option value="NORMALE">Normale</option>
+                                <option value="MANUALE">Manuale</option>
                                 <option value="TELEPASS">Telepass</option>
                                 <option value="EMERGENZA">Emergenza</option>
                             </select>
